overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -38,6 +38,10 @@ body {
   display: none;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ol, ul {
   list-style: none;
 }
